--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="container-fluid">
             <img alt="CSIR Logo" src="https://www.csir.res.in/sites/all/themes/cmf/images/csir.png">
             <div class="text-start text-uppercase">
-                <strong>Council of Scientific And Industrial Research</strong>
-                <p>Ministry of Science & Technology, Govt. of India</p>
+                <strong>Council of Education</strong>
+                <p>Ministry of Education</p>
             </div>
 
             <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
